# labgrid-frontend-mle

./: .gitignore  LICENSE.md  README.md
.github/workflows/: frontend.yml  labby.yaml  main.yml
labgrid-web-client/: .eslintrc.json  .prettierignore  .prettierrc  angular.json  autobahn-browser.d.ts  karma.conf.js  package-lock.json  package.json
labgrid-web-client/src/: index.html  styles.css
labgrid-web-client/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  place.service.ts
labgrid-web-client/src/assets/: places.json  resources.json
labgrid-web-client/src/models/: place.ts  (+1 more)
labgrid-web-server/: package-lock.json  package.json  server.js
python-wamp-client/: .gitignore  Pipfile  README.md  TODO  actiontest.txt  dev-requirements.txt  prompty.py  requirements.txt  run.py  setup.cfg  setup.py  test_cup.py  testfile
python-wamp-client/doc/: modules.pu  wamp_api.md
python-wamp-client/labby/: __init__.py  __main__.py  cache.py  console.py  forward.py  labby.py  labbyError.py  labby_error.py  labby_ssh.py  labby_types.py  labby_util.py  prompty.py  resource.py  rpc.py  rpc_desc.yaml  wsurl.py
python-wamp-client/labby/router/: router.py
python-wamp-client/labby/router/.crossbar/: config.json
python-wamp-client/labgrid-example/: exporter.yaml  resources.yaml
python-wamp-client/tests/: __init__.py  mock_test.py  places.yaml  resources.yaml  rpcs_test.py  test_coordinator.py  test_mock.py  test_rpc_calls.py  wsurl_test.py
python-wamp-client/tests/pingpong/: client.py  server.py
(+72 files in other folders)
