[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = labby
version = '0.1.0'

[options]
packages = labby
install_requires =
    autobahn[asyncio,serialization,encryption]==21.3.1
    crossbar
    pywin32==227; sys_platform == 'win32'
[options.entry_points]
console_scripts = run = labby.__main__